More Bootstrap work

--- a/org/troikagame/troikagame/templates/show_troikas.html
+++ b/org/troikagame/troikagame/templates/show_troikas.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block back_button %}
+<a class="navbar-link" href="about">About</a>
+{% endblock %}
 {% block body %}
 <div data-role="collapsible" data-collapsed="false" data-theme="b">
   <h3>Active Troikas</h3>
