--- a/org/troikagame/troikagame/templates/layout.html
+++ b/org/troikagame/troikagame/templates/layout.html
@@ -2,34 +2,61 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1"/> 
-<link rel="stylesheet" href="static/bootstrap/css/bootstrap.css"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="{{ url_for('static',filename='bootstrap/css/bootstrap.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static',filename='bootstrap/css/bootstrap-responsive.css') }}">
+<link rel="stylesheet" href="{{ url_for('static',filename='css/tg.css') }}">
 <script type=text/javascript>
-  $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 </script>
 <title>Troika Game</title>
 </head>
 <body>
-<div class=page data-role="page" data-theme="a" data-content-theme="a">
-  <div data-role="header">
-	<h1>Troika Game</h1>
-	{% block back_button %}
-  	{% endblock %}
-  </div>
-  {% for message in get_flashed_messages() %}
+  <div class="page">
+    <!-- Navigation Bar -->
+    <div class="navbar navbar-inverse navbar-fixed-top desktop">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <!-- Make a three line menu button when collapsed -->
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <ul class="nav tg-mobile">
+            <li>
+              {% block back_button %} 
+              {% endblock %}
+            </li>
+          </ul>
+          <a class="brand" href="/">Troika Game</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav pull-right">
+              <li>
+              {% if not session.logged_in %} <a href="{{ url_for('login') }}">Login / Register</a> 
+              {% else %} <a href="{{ url_for('logout') }}">Logout</a> {%
+              endif %}
+              </li>
+            </ul>
+            <ul class="nav pull-left">
+              <li><a href="{{ url_for('about') }}">About</a></li>
+              <li><a href="blog">Blog</a></li>
+              <li><a href="http://www.facebook.com/troikagame">Facebook</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Flashed messages -->
+    {% for message in get_flashed_messages() %}
     <div class="flash ui-bar ui-bar-a">{{ message }}</div>
-  {% endfor %}
-  <div class=metanav>
-  {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
+    {% endfor %}
+    
+    <!-- Page Content -->
+    <div class="content">{% block body %} {% endblock %}</div>
   </div>
-  <div data-role="content">
-  {% block body %}
-  {% endblock %}
-  </div>
-</div>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="static/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
