--- a/org/troikagame/troikagame/templates/layout.html
+++ b/org/troikagame/troikagame/templates/layout.html
@@ -65,6 +65,6 @@ $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
     <div class="content">{% block body %} {% endblock %}</div>
   </div>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script src="static/bootstrap/js/bootstrap.js"></script>
+  <script src="{{ url_for('static',filename='bootstrap/js/bootstrap.js') }}"></script>
 </body>
 </html>
