--- a/org/troikagame/troikagame/static/css/tg.less
+++ b/org/troikagame/troikagame/static/css/tg.less
@@ -12,6 +12,11 @@ body {
   padding: 8px 8px 8px 8px;
 }
 
+.tg-anchor {
+  padding-top: 40px; 
+  margin-top: -40px;
+}
+
 @media (min-width : 980px) {
   .tg-heading {
     padding-top: 3em;
