--- a/org/troikagame/troikagame/templates/layout.html
+++ b/org/troikagame/troikagame/templates/layout.html
@@ -14,7 +14,7 @@ $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 <body>
   <div class="page">
     <!-- Navigation Bar -->
-    <div class="navbar navbar-inverse navbar-fixed-top desktop">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
           <!-- Make a three line menu button when collapsed -->
