--- a/org/troikagame/troikagame/templates/login.html
+++ b/org/troikagame/troikagame/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% import 'macros.html' as macros %}
 {% block back_button %}
 <a href="/">Home</a>
 {% endblock %} 
@@ -8,47 +9,28 @@
   <div class="row-fluid"> 
     <div class="span6">  
       <h2>Login</h2>
-      {% if error %}
+      {% if loginerrors %}
+      {% for loginerror in loginerrors %}
       <div class="alert alert-error tg-message">
         <button type="button" class="close" data-dismiss="alert">×</button>
-        <strong>Error:</strong> {{ error }}
+        <strong>Error:</strong> {{ loginerror }}
       </div>
+      {% endfor %}
       {% endif %}
-      <form id="tg-login" action="{{ url_for('login') }}" method=post>
-        <dl>
-          <dt>Email Address:</dt>
-          <dd><input type=text name=email></dd>
-          <dt>Password:</dt>
-          <dd><input type=password name=password></dd>
-          <dd><input type=submit value=Login></dd>
-        </dl>
-      </form>
+      {% call macros.login_form(form=loginform) %} {% endcall %}
     </div>
     <div class="span6">  
       <h2>Register</h2>
-      {% if error %}
+      {% if regerrors %}
+      {% for regerror in regerrors %}
       <div class="alert alert-error tg-message">
         <button type="button" class="close" data-dismiss="alert">×</button>
-        <strong>Error:</strong> {{ error }}
+        <strong>Error:</strong> {{ regerror }}
       </div>
+      {% endfor %}
       {% endif %}
-      <form id="tg-register" action="{{ url_for('login') }}" method=post>
-        <dl>
-          <dt>First Name:</dt>
-          <dd><input type=text name=register_first_name></dd>
-          <dt>Last Name:</dt>
-          <dd><input type=text name=register_last_name></dd>
-          <dt>Email Address:</dt>
-          <dd><input type=text name=register_email></dd>
-          <dt>Password:</dt>
-          <dd><input type=password name=register_password></dd>
-          <dt>Verify Password:</dt>
-          <dd><input type=password name=verify_password></dd>
-          <dd><input type=submit value=Register></dd>
-        </dl>
-      </form>
+      {% call macros.register_form(form=regform) %} {% endcall %}
     </div>
   </div>
 </div>
-
 {% endblock %}
