--- a/org/troikagame/troikagame/templates/show_troikas.html
+++ b/org/troikagame/troikagame/templates/show_troikas.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 
-{% call macros.print_heading() %} {% endcall %}
+{% call macros.heading() %} {% endcall %}
 <div class="container">
   <div class="row-fluid">
     <div class="span4">
