--- a/org/troikagame/troikagame/templates/macros.html
+++ b/org/troikagame/troikagame/templates/macros.html
@@ -1,8 +1,38 @@
-{% macro print_heading(caller) %}
+{% macro heading(caller) %}
 <div class="container tg-heading">
   <div class="span12">
     <h1>Troika Game</h1>
     <p>Do you know what the person next to you wants to teach?</p>
   </div>
 </div>
+{% endmacro %}
+
+{% macro login_form(caller, form) %}
+<form id="tg-register" action="{{ url_for('login') }}" method="POST">
+  <dl>
+    <dt>{{ form.hidden_tag() }}</dt>
+    <dt>{{ form.email.label }} {{ form.email() }}</dt>
+    <dt>{{ form.password.label }} {{ form.password() }}</dt>
+    <dt>
+      <input type="submit" value="Login">
+    </dt>
+  </dl>
+</form>
+{% endmacro %}
+
+{% macro register_form(caller, form) %}
+<form id="tg-register" action="{{ url_for('login') }}" method="POST">
+  <dl>
+    <dt>{{ form.hidden_tag() }}</dt>
+    <dt>{{ form.first_name.label }} {{ form.first_name() }}</dt>
+    <dt>{{ form.last_name.label }} {{ form.last_name() }}</dt>
+    <dt>{{ form.handle.label }} {{ form.handle() }}</dt>
+    <dt>{{ form.email.label }} {{ form.email() }}</dt>
+    <dt>{{ form.password.label }} {{ form.password() }}</dt>
+    <dt>{{ form.confirm.label }} {{ form.confirm() }}</dt>
+    <dt>
+      <input type="submit" value="Register">
+    </dt>
+  </dl>
+</form>
 {% endmacro %}
