--- a/org/troikagame/troikagame/templates/macros.html
+++ b/org/troikagame/troikagame/templates/macros.html
@@ -36,3 +36,21 @@
   </dl>
 </form>
 {% endmacro %}
+
+{% macro user_form(caller, form) %}
+<form id="tg-register" action="{{ url_for('user') }}" method="POST">
+  <dl>
+    <dt>{{ form.hidden_tag() }}</dt>
+    <dt>{{ form.first_name.label }} {{ form.first_name() }}</dt>
+    <dt>{{ form.last_name.label }} {{ form.last_name() }}</dt>
+    <dt>{{ form.handle.label }} {{ form.handle() }}</dt>
+    <dt>{{ form.email.label }} {{ form.email() }}</dt>
+    <dt>{{ form.new_password.label }} {{ form.new_password() }}</dt>
+    <dt>{{ form.new_confirm.label }} {{ form.new_confirm() }}</dt>
+    <dt>{{ form.password.label }} {{ form.password() }}</dt>
+    <dt>
+      <input type="submit" value="Update">
+    </dt>
+  </dl>
+</form>
+{% endmacro %}
