--- a/org/troikagame/troikagame/templates/macros.html
+++ b/org/troikagame/troikagame/templates/macros.html
@@ -8,7 +8,7 @@
 {% endmacro %}
 
 {% macro login_form(caller, form) %}
-<form id="tg-register" action="{{ url_for('login') }}" method="POST">
+<form id="tg-login" action="{{ url_for('login') }}" method="POST">
   <dl>
     <dt>{{ form.hidden_tag() }}</dt>
     <dt>{{ form.email.label }} {{ form.email() }}</dt>
@@ -38,7 +38,7 @@
 {% endmacro %}
 
 {% macro user_form(caller, form) %}
-<form id="tg-register" action="{{ url_for('user') }}" method="POST">
+<form id="tg-user" action="{{ url_for('user') }}" method="POST">
   <dl>
     <dt>{{ form.hidden_tag() }}</dt>
     <dt>{{ form.first_name.label }} {{ form.first_name() }}</dt>
@@ -50,6 +50,24 @@
     <dt>{{ form.password.label }} {{ form.password() }}</dt>
     <dt>
       <input type="submit" value="Update">
+    </dt>
+  </dl>
+</form>
+{% endmacro %}
+
+{% macro troika_form(caller, form) %}
+<form id="tg-troika" action="{{ url_for('troika', troika_id=caller) }}" method="POST">
+  <dl>
+    <dt>{{ form.hidden_tag() }}</dt>
+    <dt>{{ form.title.label }} {{ form.title() }}</dt>
+    <dt>{{ form.description.label }} {{ form.description() }}</dt>
+    <dt>{{ form.address.label }} {{ form.address() }}</dt>
+    <dt>{{ form.address_addendum.label }} {{ form.address_addendum() }}</dt>
+    <dt>{{ form.start_time.label }} {{ form.start_time() }}</dt>
+    <dt>{{ form.end_time.label }} {{ form.end_time() }}</dt>
+    <dt>{{ form.max_participants.label }} {{ form.max_participants() }}</dt>
+    <dt>
+      <input type="submit" value="Save Troika">
     </dt>
   </dl>
 </form>
