Added creating, editing, deleting and activating Troikas. Date and time pickers for date fields

--- a/org/troikagame/troikagame/templates/about.html
+++ b/org/troikagame/troikagame/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% import 'macros.html' as macros %}
 {% block back_button %}
-<a href="/">Home</a>
+<a href="{{ url_for('troikas') }}">Home</a>
 {% endblock %} 
 
 {% block body %}
