--- a/org/troikagame/troikagame/static/css/tg.css
+++ b/org/troikagame/troikagame/static/css/tg.css
@@ -1,6 +1,10 @@
 body {
   padding-top: 60px;
 }
+.tg-page {
+  margin-left: auto;
+  margin-right: auto;
+}
 .tg-heading,
 .tg-message {
   text-align: center;
