--- a/org/troikagame/troikagame/static/css/tg.less
+++ b/org/troikagame/troikagame/static/css/tg.less
@@ -2,6 +2,11 @@ body {
   padding-top: 60px;
 }
 
+.tg-page{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .tg-heading, .tg-message{
   text-align: center;
 }
