--- a/org/troikagame/troikagame/templates/layout.html
+++ b/org/troikagame/troikagame/templates/layout.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap/css/bootstrap.css') }}" />
 <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap/css/bootstrap-responsive.css') }}">
+<link rel="stylesheet" href="{{ url_for('static',filename='bootstrap/ext/datepicker/datepicker.css') }}">
+<link rel="stylesheet" href="{{ url_for('static',filename='bootstrap/ext/timepicker/timepicker.css') }}">
 <link rel="stylesheet" href="{{ url_for('static',filename='css/tg.css') }}">
 <script type=text/javascript>
 $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
@@ -12,7 +14,7 @@ $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 <title>Troika Game</title>
 </head>
 <body>
-  <div class="page">
+  <div class="tg-page">
     <!-- Navigation Bar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -48,24 +50,37 @@ $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
       </div>
     </div>
     
-    <!-- Flashed messages -->
+    <!-- Start with a fixed container to get things centered -->
     <div class="container">
-      <div class="row">
-        {% for message in get_flashed_messages() %}
-        <div class="span4 offset4">  
+      <div class="span12">
+          <!-- Flashed messages -->
+          {% for message in get_flashed_messages() %}
           <div class="alert alert-success tg-message">
             <button type="button" class="close" data-dismiss="alert">×</button>
             {{ message }}
           </div>
-        </div>
-        <div class="span4"></div>
-        {% endfor %}
+          {% endfor %}
+        <!-- Page Content -->
+        {% block body %} {% endblock %}
       </div>
     </div>
-    <!-- Page Content -->
-    <div class="content">{% block body %} {% endblock %}</div>
   </div>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="{{ url_for('static',filename='bootstrap/js/bootstrap.js') }}"></script>
+  <script src="{{ url_for('static',filename='bootstrap/ext/datepicker/bootstrap-datepicker.js') }}"></script>
+  <script type=text/javascript>
+    $('#troika-start_date').datepicker({
+      format: 'yyyy-mm-dd'
+  });
+  </script>
+  <script src="{{ url_for('static',filename='bootstrap/ext/timepicker/bootstrap-timepicker.js') }}"></script>
+  <script type=text/javascript>
+    $('#troika-start_time').timepicker({
+    		minuteStep: 1,
+    		defaultTime: 'value',
+    		template: 'modal',
+    		showSeconds: false,
+    		showMeridian: false});
+  </script>
 </body>
 </html>
