--- a/org/troikagame/troikagame/templates/troikas.html
+++ b/org/troikagame/troikagame/templates/troikas.html
@@ -6,7 +6,12 @@
 {% block body %}
 
 {% call macros.heading() %} {% endcall %}
-<div class="container">
+{% if session.logged_in %}
+<div class="pagination-centered">
+  <a href="{{ url_for('create_troika') }}"><h4>Create new Troika</h4></a>
+</div>
+{% endif %}
+<div class="container-fluid">
   <div class="row-fluid">
     <div class="span4">
       <div class="accordion" id="tg-active-accordion">
@@ -24,7 +29,7 @@
               <ul class=entries>
                 {% for active_entry in active_entries %}
                 <li><a
-                  href="{{ url_for('show_troika_details', troika_id=active_entry.id) }}">
+                  href="{{ url_for('troika', troika_id=active_entry.id) }}">
                     {{ active_entry.title }} </a></li> {% else %}
                 <li><em>Unbelievable. No entries.</em></li> {% endfor
                 %}
@@ -51,7 +56,7 @@
               <ul class=entries>
                 {% for pending_entry in pending_entries %}
                 <li><a
-                  href="{{ url_for('show_troika_details', troika_id=pending_entry.id) }}">
+                  href="{{ url_for('troika', troika_id=pending_entry.id) }}">
                     {{ pending_entry.title }} </a></li> {% else %}
                 <li><em>Unbelievable. No entries here so far</em></li> {% endfor
                 %}
@@ -77,7 +82,7 @@
               <ul class=entries>
                 {% for completed_entry in completed_entries %}
                 <li><a
-                  href="{{ url_for('show_troika_details', troika_id=completed_entry.id) }}">
+                  href="{{ url_for('troika', troika_id=completed_entry.id) }}">
                     {{ completed_entry.title }} </a></li> {% else %}
                 <li><em>Unbelievable. No entries here so far</em></li> {% endfor
                 %}
