Joining and leaving Troikas

--- a/org/troikagame/troikagame/templates/troika.html
+++ b/org/troikagame/troikagame/templates/troika.html
@@ -28,15 +28,65 @@
     </div>
     <div class="span4 tg-group">
       <div class="span12">
-        <h3>Teacher</h3> {{ troika.teacher }}
-        <h3>First Learner</h3> {{ troika.first_learner }}
-        <h3>Second Learner</h3> {{ troika.second_learner }}
+        <h3>Teacher</h3> 
+        {% if (troika.teacher == None and session.logged_in and not troika.participating) %}
+          <a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=0) }}">
+          Teach this Troika
+          </a>
+        {% else %}
+          {{ troika.teacher }}
+          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'teacher') %}
+            <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=0) }}">
+            Leave this Troika
+            </a>
+          {% endif %}
+        {% endif %}
+        <h3>First Learner</h3>
+        {% if (troika.first_learner == None and session.logged_in and not troika.participating) %}
+          <a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=1) }}">
+          Be the first learner in this Troika
+          </a>
+        {% else %}
+          {{ troika.first_learner }}
+          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'first_learner') %}
+            <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=1) }}">
+            Leave this Troika
+            </a>
+          {% endif %}
+        {% endif %}
+        <h3>Second Learner</h3> 
+        {% if (troika.second_learner == None and session.logged_in and not troika.participating) %}
+          <a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=2) }}">
+          Be the second learner in this Troika
+          </a>
+        {% else %}
+          {{ troika.second_learner }}
+          {% if (troika.phase not in ['active', 'complete'] and troika.participating == 'second_learner') %}
+            <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=2) }}">
+            Leave this Troika
+            </a>
+          {% endif %}
+        {% endif %}
         <h3>Max Participants</h3> {{ troika.max_participants }}
         <h3>Participants</h3>
-          {% for participant in troika.participants %} 
-            {{ participant.full_name }} 
+          {% for participant in troika.participants %}
+            {% if (loop.last) %}
+              {{ participant.full_name }}
+            {% else %}
+              {{ participant.full_name + ', ' }}
+            {% endif %}
             {% else %} None 
           {%endfor %}
+          {% if (troika.phase == 'active' and session.logged_in and not troika.participating) %}
+            <a href="{{ url_for('join_troika', troika_id=troika.id, troika_role=3) }}">
+            Participate in this Troika
+            </a>
+          {% elif (troika.phase != 'complete' and troika.participating == 'participant') %}
+            <a href="{{ url_for('leave_troika', troika_id=troika.id, troika_role=3) }}">
+            Leave this Troika
+            </a>
+          {% endif %}
+          
       </div>
     </div>
   </div>
