--- a/org/troikagame/troikagame/templates/troika.html
+++ b/org/troikagame/troikagame/templates/troika.html
@@ -20,7 +20,7 @@
     </div>
     <div class="span4 tg-group">
       <div class="container span12">
-        <h3>Phase</h3> {{ troika.phase }}
+        <h3>Status</h3> {{ troika.phase }}
         <h3>Start time</h3> {{ troika.start_time }}
         <h3>End time</h3> {{ troika.end_time }}
         <h3>Address</h3> {{ troika.address }} - {{ troika.address_addendum }}
